@@ -3,11 +3,11 @@ package com.baiyi.opscloud.facade.datasource.impl;
 import com.baiyi.opscloud.common.constants.enums.DsTypeEnum;
 import com.baiyi.opscloud.common.util.BeanCopierUtil;
 import com.baiyi.opscloud.domain.DataTable;
+import com.baiyi.opscloud.domain.constants.DsAssetTypeConstants;
 import com.baiyi.opscloud.domain.generator.opscloud.DatasourceInstance;
 import com.baiyi.opscloud.domain.generator.opscloud.DatasourceInstanceAsset;
 import com.baiyi.opscloud.domain.param.datasource.DsAssetParam;
 import com.baiyi.opscloud.domain.param.datasource.DsInstanceParam;
-import com.baiyi.opscloud.domain.constants.DsAssetTypeConstants;
 import com.baiyi.opscloud.domain.vo.datasource.DsAssetVO;
 import com.baiyi.opscloud.domain.vo.datasource.DsInstanceVO;
 import com.baiyi.opscloud.facade.datasource.DsFacade;
@@ -18,10 +18,14 @@ import com.baiyi.opscloud.service.datasource.DsInstanceAssetService;
 import com.baiyi.opscloud.service.datasource.DsInstanceService;
 import com.google.common.collect.Lists;
 import lombok.RequiredArgsConstructor;
+import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
+import org.springframework.util.CollectionUtils;
 
 import java.util.List;
 import java.util.stream.Collectors;
+
+import static com.baiyi.opscloud.common.config.ThreadPoolTaskConfiguration.TaskPools.CORE;
 
 /**
  * @Author baiyi
@@ -50,7 +54,7 @@ public class DsInstanceAssetFacadeImpl implements DsInstanceAssetFacade {
         List<DsAssetVO.Asset> data = BeanCopierUtil.copyListProperties(table.getData(), DsAssetVO.Asset.class)
                 .stream()
                 .peek(e -> dsAssetPacker.wrap(e, pageQuery, pageQuery)
-        ).collect(Collectors.toList());
+                ).collect(Collectors.toList());
         return new DataTable<>(data, table.getTotalNum());
     }
 
@@ -70,7 +74,7 @@ public class DsInstanceAssetFacadeImpl implements DsInstanceAssetFacade {
                     .build();
             List<DatasourceInstanceAsset> sshKeyAssets = dsInstanceAssetService.queryAssetByAssetParam(asset);
             result.addAll(sshKeyAssets.stream().map(a -> dsAssetPacker.wrap(i, a))
-                    .collect(Collectors.toList()));
+                    .toList());
         });
         return result;
     }
@@ -78,6 +82,34 @@ public class DsInstanceAssetFacadeImpl implements DsInstanceAssetFacade {
     @Override
     public void deleteAssetByAssetId(int assetId) {
         simpleDsAssetFacade.deleteAssetById(assetId);
+    }
+
+    @Override
+    @Async(value = CORE)
+    public void deleteAssetByType(int instanceId, String assetType) {
+        DatasourceInstance dsInstance = dsInstanceService.getById(instanceId);
+        if (dsInstance == null) {
+            return;
+        }
+        DsAssetParam.AssetPageQuery pageQuery = DsAssetParam.AssetPageQuery.builder()
+                .instanceUuid(dsInstance.getUuid())
+                .assetType(assetType)
+                .page(1)
+                .length(50)
+                .build();
+        while (true) {
+            DataTable<DatasourceInstanceAsset> table = dsInstanceAssetService.queryPageByParam(pageQuery);
+            if (CollectionUtils.isEmpty(table.getData())) {
+                return;
+            } else {
+                try {
+                    for (DatasourceInstanceAsset asset : table.getData()) {
+                        simpleDsAssetFacade.deleteAssetById(asset.getId());
+                    }
+                } catch (Exception ignored) {
+                }
+            }
+        }
     }
 
     @Override
